# lane

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: pr-policy.yml
docs/agent/: backlog.md
opencode/tools/: lane.ts
openspec/changes/archive/2026-05-13-paseo-native-lane-tool/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-14-attach-existing-lane/: README.md
openspec/changes/cleanup-archive-summary/: README.md
openspec/changes/init-agent-opencode/: README.md
openspec/changes/paseo-list-cwd/: README.md
openspec/changes/paseo-native-lane-tool/: design.md  proposal.md  tasks.md
openspec/changes/pr-first-finalize-lifecycle/: README.md
openspec/changes/shared-lane-selector-materialization/: README.md
openspec/changes/shared-venv-run/: README.md
openspec/changes/status-json/: design.md  proposal.md  tasks.md
scripts/: install.sh  register_opencode_tool.py
src/lane/: __init__.py  branches.py  cleanup.py  cli.py  doctor.py  forge.py  forge_remote.py  github_remote.py  init.py  lane_target.py  openspec.py  paseo.py  resolve.py  review.py  run.py  selectors.py  state.py  status.py  sync.py  verify.py
tests/: test_branches.py  test_cleanup.py  test_cli.py  test_doctor.py  test_forge.py  test_init.py  test_lane_target.py  test_openspec.py  test_paseo.py  test_register_opencode_tool.py  test_resolve.py  test_review.py  test_run.py  test_state.py  test_status.py  test_sync.py  test_verify.py
(+13 files in other folders)
